<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ToDoMe</string>
    <string name="name">Task:</string>
    <string name="notes">Notes:</string>
    <string name="specific_location">Postcode (optional):</string>
    <string name="save">Save</string>
    <string name="mark_complete">Mark complete</string>
    <string name="ready">Ready</string>
    <string name="service_started">Service started</string>
    <string name="service_stopped">Service stopped</string>
    <string name="service_label">Service label</string>
    <string name="preferences">Preferences</string>
    <string name="pref">Pref</string>
    <string name="about">About</string>
    <string name="with">With Contact</string>
    <string name="time_label">Time</string>
    <string name="priority">Priority</string>
    <string name="app_version">0.1.1</string>
    <string name="created_by">Created by: Chris Baines, Rebecca Brannum, Harry Cutts, John Preston, and James Robinson</string>
    <string name="github">GitHub: https://github.com/ToDoMe/ToDoMe</string>
    <string name="license">Copyright (C) 2011 Chris Baines, Rebecca Brannum, Harry Cutts, John Preston, James Robinson\n
\n
This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.\n
\n
This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n
\n
You should have received a copy of the GNU General Public License along with this program; if not, write to the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.\n</string>
    <string name="findwithin"> Find POIs within </string>
    <string name="giveme"> Give me </string>
    <string name="updategps"> Update GPS every </string>
    <string name="minutes"> minutes </string>
    <string name="oflocation"> km of my location </string>
    <string name="minutesbefore"> minutes extra before POIs close </string>
    <string name="poi"> n.b: POI means Point Of Interest</string>
    <string name="cancel">Cancel</string>
    <string name="max_radius"> Maximum search radius is 10km</string>
    <string name="disable_notifications">Disable notifications</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="reset_prefs">Reset preferences</string>
    <string name="clear_data">Clear data</string>
    <string name="website_info">Website at todome.org.uk created by Alex Baker.</string>
    <string name="welcome_message">To start using ToDoMe, enter some tasks in the To-Do tab. ToDoMe picks up certain keywords in the task name to detect what types of locations will enable you to carry out your task. Please note that this software is beta, and there are lots of bugs and stability issues.</string>
    <string name="welcome_title">Welcome to ToDoMe</string>
    <string name="complete_message">Mark complete?</string>
    <string name="delete_message">Delete?</string>
</resources>
